# GFDL_atmos_cubed_sphere

./: CMakeLists.txt
cmake/: compiler_flags_Cray_Fortran.cmake  compiler_flags_GNU_Fortran.cmake  compiler_flags_Intel_Fortran.cmake  compiler_flags_XL_Fortran.cmake  fv3_compiler_flags.cmake
model/: fv_arrays.F90  fv_control.F90
tools/: external_ic.F90  fv_diagnostics.F90  fv_grid_tools.F90  fv_mp_mod.F90  fv_restart.F90  test_cases.F90
